test/syntax/fail/init_fby_not_constant.sync
let node g x =
  x fby x
